.provarCaches/00D410000011HE0EAM/objects/rstk__soentusesum__c.object
<CustomObject>
    <description>soentusesum__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__soentusesum_socontent__r.rstk__externalid__c &amp; rstk__soentusesum_seq__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__soentusesum_socontent__r.Name &amp; rstk__soentusesum_seq__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soentusesum_date__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__soentusesum_entprod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Entitled To Product</label>
        <referenceTo>rstk__soprod__c</referenceTo>
        <relationshipLabel>Contract Entitlement Usage Summaries</relationshipLabel>
        <relationshipName>soentusesums</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soentusesum_entprodascat__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Product representing the Category for this Entitlement.</inlineHelpText>
        <label>Entitled To Category</label>
        <referenceTo>rstk__soprod__c</referenceTo>
        <relationshipLabel>Contract Entitlement Usage Summaries (Entitled To Category)</relationshipLabel>
        <relationshipName>soentusesums3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soentusesum_entprodasprodgroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Product representing the Product Group for this Entitlement.</inlineHelpText>
        <label>Entitled To Product Group</label>
        <referenceTo>rstk__soprod__c</referenceTo>
        <relationshipLabel>Contract Entitlement Usage Summaries (Entitled To Product Group)</relationshipLabel>
        <relationshipName>soentusesums1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soentusesum_entprodassubcat__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Product representing the Sub Category for this Entitlement.</inlineHelpText>
        <label>Entitled To Sub-Category</label>
        <referenceTo>rstk__soprod__c</referenceTo>
        <relationshipLabel>Contract Entitlement Usage Summaries (Entitled To Sub-Category)</relationshipLabel>
        <relationshipName>soentusesums2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soentusesum_month__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soentusesum_seq__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Sequence</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>rstk__soentusesum_socontent__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Contract Entitlements</label>
        <referenceTo>rstk__socontent__c</referenceTo>
        <relationshipLabel>Contract Entitlement Usage Summaries</relationshipLabel>
        <relationshipName>soentusesums</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>rstk__soentusesum_socust__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Customer linked to this entitlement usage.</inlineHelpText>
        <label>Usage Customer</label>
        <referenceTo>rstk__socust__c</referenceTo>
        <relationshipLabel>Contract Entitlement Usage Summaries</relationshipLabel>
        <relationshipName>soentusesums</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soentusesum_sowarr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Covered Item</label>
        <referenceTo>rstk__sowarr__c</referenceTo>
        <relationshipLabel>Contract Entitlement Usage Summaries</relationshipLabel>
        <relationshipName>Contract_Entitlement_Usage_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soentusesum_sumtype__c</fullName>
        <label>Summary Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
                <value>
                    <fullName>Term</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__soentusesum_totdol__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Total Amount</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soentusesum_totqty__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Total Quantity</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soentusesum_year__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Contract Entitlement Usage Summary</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>rstk__RS_Contract_Entitlement_Usage_Summaries</fullName>
        <columns>NAME</columns>
        <columns>rstk__soentusesum_socontent__c</columns>
        <columns>rstk__soentusesum_sumtype__c</columns>
        <columns>rstk__soentusesum_seq__c</columns>
        <columns>rstk__soentusesum_sowarr__c</columns>
        <columns>rstk__soentusesum_entprod__c</columns>
        <columns>rstk__soentusesum_date__c</columns>
        <columns>rstk__soentusesum_month__c</columns>
        <columns>rstk__soentusesum_year__c</columns>
        <columns>rstk__soentusesum_totdol__c</columns>
        <columns>rstk__soentusesum_totqty__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Contract Entitlement Usage Summaries</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Entitlement Usage Summaries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>